# tracecontext

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  demo_ui.py  package.json  pyproject.toml  run_demo.py  setup.py  simulate_demo.py
.github/workflows/: ci.yml
cli/src/: index.ts
cli/src/commands/: init.ts  status.ts
demo-v2/: main.py  payments.py
demo-v3/: frontend_stack.txt
final-demo/: core.py
infrastructure/: docker-compose.yml
mcp-server/src/: index.ts
tests/: test_smoke.py
trace-demo/: logic.py  payments.py
tracecontext/: README.md  __init__.py  cli.py  mcp_server.py
tracecontext/agents/: dead_end.py  distiller.py  ranker.py
tracecontext/docs/: adr-001-inception.md  architecture.md
tracecontext/orchestrator/: db.py  graph.py  main.py  requirements.txt
web/src/: App.tsx  index.css
